3.14.B